<resources>
    <string name="app_name">Smartmenu</string>
    <bool name="isTablet">false</bool>
    <string name="facebook_app_id">1149439968455577</string>
    <string name="btnLogin">Login</string>
    <string name="btnMenu">Menu</string>
    <string name="cart">Cart</string>
    <string name="confirmation">Confirmation</string>
    <string name="table">Select Table</string>
    <string name="add">ADD</string>
    <string name="back">Back</string>
    <string name="feedback">feedback</string>
    <string name="notes">Notes</string>
    <string name="addOn">Add On</string>
    <string name="choiceOf">Your Choice of</string>
    <string name="selectCover">Select Cover</string>
    <string name="name">Name</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="settings_icon"></string>
    <string name="feedback_form">Feedback Form</string>
    <string name="hospitality">Hospitality</string>
    <string name="products">Products</string>
    <string name="service_hygiene">Service &amp; Hygiene</string>
    <string name="environment">Environment</string>
    <string name="comments">Comments</string>
    <string name="phone">Phone</string>
    <string name="email">E-Mail</string>
    <string name="categoryTitle">Category</string>
    <string name="categorySubTitle">Please select desired category to explore the products</string>
    <string name="email_address_error">Please enter a valid email address.</string>
    <string name="sharing_on_facebook">Sharing on Facebook</string>
    <string name="please_enter_your_password">Please Enter Your Password</string>
    <string name="please_enter_your_username">Please Enter Your Username</string>
    <string name="enter_covers">Please enter covers</string>
    <string name="select_covers">Please select covers</string>
    <string name="please_add_note">Please add a note.</string>

    <string name="btnConnect">Test connection</string>
    <string name="hint_server_address">Please enter server address</string>
    <string name="hint_port">Please enter server port</string>

    <string name="title_activity_dm__menu">DM_Menu</string>
    <string name="title_activity_category_list">CategoryListActivity</string>
    <string name="title_activity_dm__products">Dm_Products</string>
    <string name="title_activity_dm__category_items">DM_CategoryItems</string>
    <string name="title_activity_dm__splash">DM_Splash</string>
    <string name="title_activity_dm__manual_sync">DM_ManualSync</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_title_data_load">Fast / Live</string>
    <string name="title_activity_posterminal">POSTerminalActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="information">
        Zearo Introduced visualize the restaurant menu according to your restaurant that evokes the brand and introduces your menus in the most interactive manner with Smart Menu App. Digital Restaurant EMenu (Smart Menu) offers robust features that not only help your restaurant to update the menu anytime but also
        improves the overall dining experience.\n\nThe tablet menu provides a user-friendly interface offering smooth navigation and browsing through digital menu a delightful experience.\n\n
        Smart Menu application supports Android Tablets giving your freedom to choose best platform of your choice This Android App is often classified as Digital menu software, Restaurant menu app, Tablet Menu System or even Mobile Restaurant Menu System.
    </string>

    <string name="address">
        Zearo Consulting Services\n
        M : +974 6681 5564\n
        E : sales@zearoconsulting.com\n
        W : www.zearoconsulting.com
    </string>
    <string name="title_activity_dm__selected_product">DM_SelectedProduct</string>
    <string name="select_all_covers">Select All Covers</string>

</resources>
