<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffd6c9d0"
    android:gravity="center"
    android:minHeight="350dp"
    android:minWidth="600dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple">

        <TextView
            android:id="@+id/selected_table_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10.0dip"
            android:textColor="@color/white"
            android:textSize="22.0dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pleaseEnterNoOfCovers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5.0dip"
            android:text="@string/select_covers"
            android:layout_below="@+id/selected_table_name"
            android:textColor="@color/white"
            android:textSize="18.0dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/pleaseEnterNoOfCovers"
            android:padding="10.0dip"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <!--
        <EditText
            android:id="@+id/edtCoverNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:inputType="number"
            android:textCursorDrawable="@null" />-->

    <CheckBox
        android:id="@+id/select_all_covers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/select_all_covers" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cover_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="60.0dip"
            android:layout_margin="10.0dip"
            fancy:fb_borderColor="@color/purplelight"
            fancy:fb_borderWidth="2.0dip"
            fancy:fb_ghost="true"
            fancy:fb_radius="2.0dip"
            fancy:fb_text="@string/submit"
            fancy:fb_textColor="@color/purplelight"
            fancy:fb_textSize="16.0sp" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="60.0dip"
            android:layout_margin="10.0dip"
            fancy:fb_borderColor="@color/purplelight"
            fancy:fb_borderWidth="2.0dip"
            fancy:fb_ghost="true"
            fancy:fb_radius="2.0dip"
            fancy:fb_text="Cancel"
            fancy:fb_textColor="@color/purplelight"
            fancy:fb_textSize="16.0sp" />
    </LinearLayout>
</LinearLayout>